--- a/shared/templates/sysctl/ansible.template
+++ b/shared/templates/sysctl/ansible.template
@@ -5,21 +5,8 @@
 # disruption = medium
 
 - name: List /etc/sysctl.d/*.conf files
-{{% if product in ["sle12","sle15"] %}}
   find:
-    paths:
-      - "/etc/sysctl.d/"
-      - "/run/sysctl.d/"
-{{% else %}}
-  find:
-    paths:
-      - "/etc/sysctl.d/"
-      - "/run/sysctl.d/"
-      - "/usr/local/lib/sysctl.d/"
-{{% endif %}}
-{{% if product not in ["fedora", "ol7", "ol8", "ol9", "rhcos4", "rhel7", "rhel8", "rhel9"] %}}
-      - "/usr/lib/sysctl.d/"
-{{% endif %}}
+    paths: {{{ ansible_sysctl_set_config_directories() }}}
     contains: '^[\s]*{{{ SYSCTLVAR }}}.*$'
     patterns: "*.conf"
     file_type: any
