fix: Fix misspelled word infrastruture #10530

--- a/controls/nist_satellite6.yml
+++ b/controls/nist_satellite6.yml
@@ -2486,7 +2486,7 @@ controls:
     the process by wich this determination is made. Once processing
     capacity is reserved in an alternate region for this critical
     functionality, the remainder of the control may be inherited
-    from your infrastruture provider.
+    from your infrastructure provider.
   rules: []
   description: |-
     The organization identifies critical information system assets supporting essential missions and business functions.
@@ -4437,7 +4437,7 @@ controls:
   status: pending
   notes: |-
     Section a: The customer will be responsible for conducting a risk assessment,
-    including a review of controls inherited from infrastruture providers,
+    including a review of controls inherited from infrastructure providers,
     and for those which the customer is responsible. A successful control
     response will need to address the assessment methodology and calculation
     of the likelihood and magnitude of harm that could result from
