--- a/linux_os/guide/services/ntp/chronyd_server_directive/policy/stig/shared.yml
+++ b/linux_os/guide/services/ntp/chronyd_server_directive/policy/stig/shared.yml
@@ -6,7 +6,7 @@ vuldiscussion: |-
 
     Synchronizing internal information system clocks provides uniformity of time stamps for information systems with multiple system clocks and systems connected over a network.
 
-    Depending on the infrastruture being used the "pool" directive may not be supported.
+    Depending on the infrastructure being used the "pool" directive may not be supported.
 
 checktext: |-
     Verify {{{ full_name }}} is securely comparing internal information system clocks at least every 24 hours with an NTP server with the following commands:
