--- a/linux_os/guide/services/ntp/chronyd_server_directive/rule.yml
+++ b/linux_os/guide/services/ntp/chronyd_server_directive/rule.yml
@@ -6,7 +6,7 @@ description: |-
     Check that Chrony only has time sources configured with the <tt>server</tt> directive.
 
 rationale: |-
-    Depending on the infrastruture being used the <tt>pool</tt> directive may not be supported.
+    Depending on the infrastructure being used the <tt>pool</tt> directive may not be supported.
 
 severity: medium
 
