Fix: another misspelled word, adminstrator

--- a/linux_os/guide/services/ntp/chronyd_server_directive/rule.yml
+++ b/linux_os/guide/services/ntp/chronyd_server_directive/rule.yml
@@ -13,7 +13,7 @@ severity: medium
 platform: package[chrony]
 
 warnings:
-  - general: This rule doesn't come with a remediation, the time source needs to be added by the adminstrator.
+  - general: This rule doesn't come with a remediation, the time source needs to be added by the administrator.
 
 identifiers:
     cce@rhel8: CCE-86077-5
