fix: nobody_uid: use it in ansible too

--- a/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_exists/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_exists/ansible/shared.yml
@@ -20,4 +20,4 @@
   loop: '{{ local_users }}'
   when:
     - item.value[2]|int >= {{{ uid_min }}}
-    - item.value[2]|int != 65534
+    - item.value[2]|int != {{{ nobody_uid }}}
