--- a/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/ansible/shared.yml
@@ -21,5 +21,5 @@
   loop: '{{ local_users }}'
   when:
     - item.value[2]|int >= {{{ uid_min }}}
-    - item.value[2]|int != 65534
+    - item.value[2]|int != {{{ nobody_uid }}}
     - not item.value[4] | regex_search('^\/\w*\/\w{1,}')
