change: sysctl_kernel_core_pattern_empty_string: use sysctl template
Handle emtpy string in ansible because `sysctl` module does not handle
empty string.

--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern_empty_string/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern_empty_string/rule.yml
@@ -43,3 +43,10 @@ ocil: |
     <code>kernel.core_pattern = $</code>
 
 platform: machine
+
+template:
+    name: sysctl
+    vars:
+        sysctlvar: kernel.core_pattern
+        sysctlval: ""
+        datatype: string
