change: sysctl: enable fedora
Mostly where ever rhel8 / rhel9 is used.

--- a/linux_os/guide/system/network/network-kernel/network_host_and_router_parameters/sysctl_net_ipv4_conf_all_forwarding/rule.yml
+++ b/linux_os/guide/system/network/network-kernel/network_host_and_router_parameters/sysctl_net_ipv4_conf_all_forwarding/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel7,rhel8,rhel9
+prodtype: fedora,rhel7,rhel8,rhel9
 
 title: 'Disable Kernel Parameter for IPv4 Forwarding on all IPv4 Interfaces'
 
