--- a/linux_os/guide/system/permissions/restrictions/enable_execshield_settings/sysctl_kernel_kptr_restrict/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/enable_execshield_settings/sysctl_kernel_kptr_restrict/rule.yml
@@ -69,7 +69,7 @@ template:
     name: sysctl
     vars:
         sysctlvar: kernel.kptr_restrict
-        {{% if 'ol' in product or 'rhel' in product %}}
+        {{% if product in ['fedora'] or 'ol' in product or 'rhel' in product %}}
         sysctlval:
         - '1'
         - '2'
