--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_core_pattern/rule.yml
@@ -13,7 +13,7 @@ rationale: |-
 
 severity: medium
 
-{{% if product in ["rhel9"] %}}
+{{% if product in ["fedora", "rhel9"] %}}
 conflicts:
     - sysctl_kernel_core_pattern_empty_string
 {{% endif %}}
