Fix in the SLE 12/15 rule sshd_use_strong_kex

--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -1671,6 +1671,7 @@ controls:
     status: automated
     rules:
       - sshd_use_strong_kex
+      - sshd_strong_kex=cis_sle12
 
   - id: 5.2.16
     title: Ensure SSH Idle Timeout Interval is configured (Automated)
