--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1855,6 +1855,7 @@ controls:
     status: automated
     rules:
       - sshd_use_strong_kex
+      - sshd_strong_kex=cis_sle15
 
   - id: 5.2.16
     title: Ensure SSH Idle Timeout Interval is configured (Automated)
