--- a/linux_os/guide/system/software/updating/package_gnome_software_installed/rule.yml
+++ b/linux_os/guide/system/software/updating/package_gnome_software_installed/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: fedora
 
-title: 'Install GNOME software'
+title: 'Install GNOME Software'
 
 description: |-
     {{{ describe_package_install(package="gnome-software") }}}
