--- a/products/firefox/guide/firefox/firefox_policy-content_blocker/rule.yml
+++ b/products/firefox/guide/firefox/firefox_policy-content_blocker/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: firefox
 
-title: 'Ensure the content blocker uBlock Origin is installed'
+title: 'Ensure the Content Blocker uBlock Origin is Installed'
 
 description: |-
     The uBlock Origin will be installed automatically by configuring Firefox policy, and updates will be enabled. It can also be installed through the Mozilla Add-Ons store at https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/.
